--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-This plugin attempts to implement the OAuth functionality for Symfony 1.4 using PECL OAuth extension.
+# sfCacophonyPlugin #
+
+This plugin implements the OAuth functionality for Symfony 1.4 using PECL OAuth extension.
 
 What's OAuth?
 Please go to links below for best explanation I've ever seen so far.
@@ -12,6 +14,39 @@ Requirements:
 - Pecl OAuth extension
  - http://uk3.php.net/manual/en/book.oauth.php
  - http://pecl.php.net/package/oauth
-- sfGuardPlugin
+- sfDoctrineGuardPlugin - for now it doesn't work with Propel, but there are plans to make it work
 
+For now it supports OAuth 1.0 providers. So for it has been tested with:
+- Vimeo
+- Twitter
+
+but I'm planning to implement all major providers, that is:
+- Yahoo
+- Google
+- LinkedIn
+- MySpace
+- and, of course, Facebook
+
+## Installation: ##
+
+For subversion users:
+
+svn checkout https://svn.github.com/nixilla/sfCacophonyPlugin.git ./plugins/sfCacophonyPlugin
+
+If you're using svn:externals
+
+svn pe svn:externals plugins/
+
+... your other plugins including sfDoctrineGuardPlugin ...
+sfCacophonyPlugin https://svn.github.com/nixilla/sfCacophonyPlugin.git
+
+svn update
+
+For git users:
+
+cd plugins && git clone git://github.com/nixilla/sfCacophonyPlugin.git
+
+## Configuration: ##
+
+## Usage: ##
 
