--- a/README
+++ b/README
@@ -74,11 +74,11 @@ cd plugins && git clone git://github.com/nixilla/sfCacophonyPlugin.git
 20.    vim apps/frontend/config/filters.yml
 21.    vim apps/frontend/lib/myUser.class.php
 
-Lines 1 to 11 - we're setting up standard symfony called cacophony with 2 plugins.
-Line 12 - configure your database connection settings
-Line 13 - enable 2 new plugins 
-  $this->enablePlugins('sfDoctrinePlugin','sfDoctrineGuardPlugin','sfCacophonyPlugin');
-Line 14 - modify sfGuardUser model to accept null for emails, as you won't get emails from some OAuth providers (optional)
+* Lines 1 to 11 - we're setting up standard symfony called cacophony with 2 plugins.
+* Line 12 - configure your database connection settings
+* Line 13 - enable 2 new plugins 
+    $this->enablePlugins('sfDoctrinePlugin','sfDoctrineGuardPlugin','sfCacophonyPlugin');
+* Line 14 - modify sfGuardUser model to accept null for emails, as you won't get emails from some OAuth providers (optional)
     
     sfGuardUser:
       columns:
@@ -87,10 +87,10 @@ Line 14 - modify sfGuardUser model to accept null for emails, as you won't get e
           notnull: false
           unique: true
 
-Line 15 - build models forms and filters
-Line 16 - create frontend app
-Line 17 - remove security check from front controller (optional)
-Line 18 - add your consumer_key and consumer secret
+* Line 15 - build models forms and filters
+* Line 16 - create frontend app
+* Line 17 - remove security check from front controller (optional)
+* Line 18 - add your consumer_key and consumer secret
 
     all:
       .settings:
@@ -103,7 +103,7 @@ Line 18 - add your consumer_key and consumer secret
               consumer_key: YOUR_ANOTHER_KEY
               consumer_secret: YOUR_ANOTHER_SECRET
 
-Line 19 - enable modules and add sfGuard config
+* Line 19 - enable modules and add sfGuard config
 
     enabled_modules:        [default, sfGuardAuth, sfGuardRegister, sfCacophonyConsumer]
 
@@ -113,7 +113,7 @@ Line 19 - enable modules and add sfGuard config
     secure_module:          sfGuardAuth
     secure_action:          secure
 
-Line 20 - add filter
+* Line 20 - add filter
 
     rendering: ~
     security:  ~
@@ -125,7 +125,7 @@ Line 20 - add filter
     cache:     ~
     execution: ~
 
-Line 21 - change base class for myUser to sfGuardSecurityUser
+* Line 21 - change base class for myUser to sfGuardSecurityUser
   
     class myUser extends sfGuardSecurityUser
     {
@@ -133,6 +133,6 @@ Line 21 - change base class for myUser to sfGuardSecurityUser
 
 Then ./symfony cc and you're good to go
 
-Navigate to http://your.url/frontend_dev.php/oauth/connect/(vimeo|twitter)
-Accept your app
-and check your database (sf_guard_user and token tables)
+* Navigate to http://your.url/frontend_dev.php/oauth/connect/(vimeo|twitter)
+* Accept your app on your provider's page
+* and check your database (sf_guard_user and token tables)
